              The old names have been removed completely.
        Class Triangulation<dim>:
            - New constructor that takes a link and builds its complement.
            - Now supports move construction and copy/move assignment.
            - Routine fromIsoSig() now returns by value (not pointer), and
              throws an exception on error (instead of returning null).
            - New alias fromSig(), which is is identical to fromIsoSig().
            - Routine simplices(), faces(), components(), boundaryComponents(),
              and the aliases vertices(), edges(), etc. no longer return a
              const reference to a std::vector or FaceList.  Instead they
              return a lightweight ListView object by value: its full type is
              undefined (so you should use auto), and it supports at least the
              same operations and functions as the old FaceList (except
              there is no Iterator typedef - use iterator or auto instead).
              C++ users who only ever used simplices(), faces(), etc. as a
              temporary (as was recommended) should be unaffected, and the
              Python behaviour of these functions is completely unchanged.
              The old names are kept as deprecated aliases.
            - New routines newSimplices<k>() and newSimplices(k), along
              with dimension-specific aliases newTriangles(), newTetrahedra()
              and newPentachora().  The templated versions of these functions
              can be used with structured binding.
            - Routine splitIntoComponents() is replaced with a new routine
              triangulateComponents() with different behaviour: it does not
              insert the results into the packet tree or assign packet labels.
              The old splitIntoComponents() has been removed completely,
              since it relied on triangulations living in the packet tree.