@@ -190,8 +190,9 @@ class Triangulation<4> : public detail::TriangulationBase<4> {
          *
          * This list may grow in future versions of Regina.
          *
-         * If Regina cannot interpret the given string, this will be
-         * left as the empty triangulation.
+         * \exception InvalidArgument Regina could not interpret the given
+         * string as representing a triangulation using any of the supported
+         * string types.
          *
          * @param description a string that describes a 4-manifold
          * triangulation.
