@@ -1439,6 +1439,8 @@ Version 7.0  [ TODO ]
             - Now supports move construction and copy/move assignment.
             - Routine fromIsoSig() now returns by value (not pointer), and
               throws an exception on error (instead of returning null).
+            - All "magic" string contructors likewise now throw exceptions
+              on error (instead of constructing empty triangulations).
             - New alias fromSig(), which is is identical to fromIsoSig().
             - Routine simplices(), faces(), components(), boundaryComponents(),
               and the aliases vertices(), edges(), etc. no longer return a
